# galncelet

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/workflows/: release.yml
docs/: release-playbook.md  release.md  runtime-addons.md
docs/ai-reference/: existing-addons.md  plugin-scaffold.md  plugin-schema.md
docs/plugin-dev/: README.md  backend.md  hooks.md  manifest.md  patterns.md  quickstart.md
scripts/: release.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: _plugins.rs  acrylic.rs  amkr.rs  clipboard_history.rs  git.rs  main.rs  page_notes.rs  page_url.rs  plugins.rs  runtime_addons.rs  settings.rs  system_monitor.rs  tray.rs  updater.rs  window_attach.rs
src-tauri/src/amkr/: mod.rs
src-tauri/src/browser_ext/: mod.rs
src-tauri/src/clipboard_history/: mod.rs
src-tauri/src/git/: git_watcher.rs  mod.rs
src-tauri/src/music_player/: lyrics.rs  mod.rs
src-tauri/src/page_notes/: mod.rs
src-tauri/src/system_monitor/: mod.rs
src/components/: AnimatedNumber.tsx  CommitTree.tsx  Dashboard.tsx  DiffViewer.tsx  EmptyState.tsx  GitConsole.tsx  GitTree.tsx  MetricRow.tsx  ProgressBar.tsx  RadialGauge.tsx  Settings.tsx  StatCard.tsx  Toggle.tsx
src/lib/: api.ts  context.tsx  format.ts  panel-types.ts  types.ts
src/pages/: ManagePage.tsx  PluginSettings.tsx  SettingsPage.tsx
src/submodule/: registry.ts
src/submodule/amkr/: AmkrPanel.tsx  index.tsx  manifest.json
src/submodule/git/: GitPanel.tsx  index.tsx  manifest.json
src/widgets/: WidgetButtons.tsx  WidgetContext.ts  WidgetShell.tsx  useAutoResize.ts
