[package]
name = "galncelet"
version = "0.1.0"
description = "Frosted-glass git status side panel"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
tokio = { version = "1", features = ["net", "sync"] }
tokio-tungstenite = "0.26"
http = "1"
futures-util = "0.3"
regex = "1"
winreg = "0.55"
dirs = "6"
uiautomation = "0.16"
sysinfo = "0.30"
arboard = "3"
nvml-wrapper = "0.10"
wmi = "0.16"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }
